--- a/index.html
+++ b/index.html
@@ -1,41 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Digital Design 1</title>
-</head>
-<body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="stylesheet.css" type="text/css" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Scope+One&display=swap" rel="stylesheet">
+        <title>Digital Design 1</title>
+    </head>
+    <body>
 
-<h1> Kate Allen</h1>
-<h2>DSGN 372</h2>
-<h2>Spring 2025</h2>
+        <h1> Kate Allen</h1>
+        <h2>DSGN 372</h2>
+        <h2>Spring 2025</h2>
 
-<nav>
-<ul>
-<li><a href="project-1/index.html">Project 1</a></li>
-<li><a href="project-1-process/index.html">Project 1 Process</a></li>
-<li><a href="project-2/index.html">Project 2</a></li>
-<li><a href="project-2/index.html">Project 2 Process</a></li>
-</ul>
-</nav>
+        <nav>
+            <ul>
+                <li><a href="project-1/index.html">Project 1</a></li>
+                <li><a href="project-1-process/index.html">Project 1 Process</a></li>
+                <li><a href="project-2/index.html">Project 2</a></li>
+                <li><a href="project-2/index.html">Project 2 Process</a></li>
+            </ul>
+        </nav>
 
-<article>
-<img src="Images/Flowers.jpg"/>
-<p>
-    I’m a graphic designer  working towards my Design BFA at Western Washington University. I love exploring all things design, but my heart belongs to branding, typography, and packaging. 
-</p>
-<p>
-    During my studies, I’ve grown my skills in Adobe Creative Suite and Figma, gaining hands-on experience with their tools.
-</p>
-<p>
-    When I'm not designing, you’ll find me outdoors, getting creative with new projects, experimenting in the kitchen, or spending time with friends and family.
-</p>
-</article>
+        <article>
+            <img src="Images/Flowers.jpg"/>
+            <p>
+                I’m a graphic designer  working towards my Design BFA at Western Washington University. I love exploring all things design, but my heart belongs to branding, typography, and packaging. 
+            </p>
+            <p>
+                During my studies, I’ve grown my skills in Adobe Creative Suite and Figma, gaining hands-on experience with their tools.
+            </p>
+            <p>
+                When I'm not designing, you’ll find me outdoors, getting creative with new projects, experimenting in the kitchen, or spending time with friends and family.
+            </p>
+        </article>
 
-<footer>
-    <hr>
-    Copyright 2025<br><a href="allenk34@wwu.edu">allenk34@wwu.edu</a></br>
-</footer>
-</body>
+        <footer>
+            <hr>
+                Copyright 2025<br><a href="allenk34@wwu.edu">allenk34@wwu.edu</a></br>
+        </footer>
+    </body>
 </html>
