--- a/index.html
+++ b/index.html
@@ -10,37 +10,48 @@
         <title>Digital Design 1</title>
     </head>
     <body>
+        <div id="wrapper">
+            <div class="columns col-4">
+                <header>
+                    <h1>Kate Allen</h1>
+                    <h2>DSGN 372</h2>
+                    <h2>Spring 2025</h2>
+                </header>
+            </div>
 
-        <h1> Kate Allen</h1>
-        <h2>DSGN 372</h2>
-        <h2>Spring 2025</h2>
+            <nav>
+                <div class="columns col-12">
+                        <ul>
+                        <li><a href="https://www.figma.com/proto/BUtIkZMbCI3269zu67ruSE/Digital-Design-Project-1-Wireframes?node-id=215-20&t=Q63ndFiRNEe6lkcG-1">Project 1 Desktop</a></li>
+                        <li><a href="https://www.figma.com/proto/BUtIkZMbCI3269zu67ruSE/Digital-Design-Project-1-Wireframes?node-id=12-426&p=f&t=Q63ndFiRNEe6lkcG-0&scaling=scale-down&content-scaling=fixed&starting-point-node-id=28%3A17">Project 1 Mobile</a></li>
+                        <li><a href="Files/Digital Design-Project 1.pdf" target="_blank">Project 1 Process</a></li>
+                        <li><a href="project-2/index.html">Project 2</a></li>
+                        <li><a href="project-2/index.html">Project 2 Process</a></li>
+                    </ul>
+                </div>
+            </nav>
 
-        <nav>
-            <ul>
-                <li><a href="https://www.figma.com/proto/BUtIkZMbCI3269zu67ruSE/Digital-Design-Project-1-Wireframes?node-id=215-20&t=Q63ndFiRNEe6lkcG-1">Project 1 Desktop</a></li>
-                <li><a href="https://www.figma.com/proto/BUtIkZMbCI3269zu67ruSE/Digital-Design-Project-1-Wireframes?node-id=12-426&p=f&t=Q63ndFiRNEe6lkcG-0&scaling=scale-down&content-scaling=fixed&starting-point-node-id=28%3A17">Project 1 Mobile</a></li>
-                <li><a href="project-1-process/index.html">Project 1 Process</a></li>
-                <li><a href="project-2/index.html">Project 2</a></li>
-                <li><a href="project-2/index.html">Project 2 Process</a></li>
-            </ul>
-        </nav>
+            <article>
+                <div class="col-8">
+                    <img src="Images/Flowers.jpg"/>
+                </div>
+                <div class="container">
+                    <p>
+                        I’m a graphic designer  working towards my Design BFA at Western Washington University. I love exploring all things design, but my heart belongs to branding, typography, and packaging. 
+                    </p>
+                    <p>
+                        During my studies, I’ve grown my skills in Adobe Creative Suite and Figma, gaining hands-on experience with their tools.
+                    </p>
+                    <p>
+                        When I'm not designing, you’ll find me outdoors, getting creative with new projects, experimenting in the kitchen, or spending time with friends and family.
+                    </p>
+                </div>
+            </article>
 
-        <article>
-            <img src="Images/Flowers.jpg"/>
-            <p>
-                I’m a graphic designer  working towards my Design BFA at Western Washington University. I love exploring all things design, but my heart belongs to branding, typography, and packaging. 
-            </p>
-            <p>
-                During my studies, I’ve grown my skills in Adobe Creative Suite and Figma, gaining hands-on experience with their tools.
-            </p>
-            <p>
-                When I'm not designing, you’ll find me outdoors, getting creative with new projects, experimenting in the kitchen, or spending time with friends and family.
-            </p>
-        </article>
-
-        <footer>
-            <hr>
-                Copyright 2025<br><a href="allenk34@wwu.edu">allenk34@wwu.edu</a></br>
-        </footer>
+            <footer>
+                <hr>
+                    Copyright 2025<br><a href="allenk34@wwu.edu">allenk34@wwu.edu</a></br>
+            </footer>
+        </div>
     </body>
 </html>
