--- a/index.html
+++ b/index.html
@@ -9,16 +9,21 @@
        <link href="css/exercise5.css" type="text/css" rel="stylesheet">
        <link rel="preconnect" href="https://fonts.googleapis.com">
        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-       <link href="https://fonts.googleapis.com/css2?family=Scope+One&display=swap" rel="stylesheet">
+       <link href="https://fonts.googleapis.com/css2?family=Oranienbaum&display=swap" rel="stylesheet">
        <title>Digital Design 1</title>
    </head>
-   <body>
-         <header>
-            <h1>Kate Allen</h1>
-            <h2>DSGN 372</h2>
-            <h2>Spring 2025</h2>
+   
+   <body class="container">
+        <header class="row">
+             <div class="five columns">
+                <h1>Kate Allen</h1>
+                <h2>DSGN 372</h2>
+                <h2>Spring 2025</h2>
+            </div>
         </header>
-
+    </class>
+    
+    <div class="seven columns">
         <nav>
             <ul>
                 <li><a href="https://www.figma.com/proto/BUtIkZMbCI3269zu67ruSE/Digital-Design-Project-1-Wireframes?node-id=215-20&t=Q63ndFiRNEe6lkcG-1">Project 1 Desktop</a></li>
@@ -28,25 +33,25 @@
                 <li><a href="project-2/index.html">Project 2 Process</a></li>
             </ul>
         </nav>
+    </div>
 
-        <article>
-            <img src="Images/Flowers.jpg"/>
-                <p>
-                    I’m a graphic designer  working towards my Design BFA at Western Washington University. 
-                </p>
-                <p>
-                    I love exploring all things design, but my heart belongs to branding, typography, and packaging.
-                </p>
-                <p>
-                    During my studies, I’ve grown my skills in Adobe Creative Suite and Figma, gaining hands-on experience with their tools.
-                </p>
-                <p>
-                    When I'm not designing, you’ll find me outdoors, getting creative with new projects, experimenting in the kitchen, or spending time with friends and family.
-                </p>
+        <article class="row">
+            <div class="seven columns">
+                <img class= "u-full-width" src="Images/Flowers.jpg"/>
+            </div>
+                <div class="five columns">
+                    <h4>Hey there, I'm Kate!</h4>
+                        <p>
+                            I’m a graphic designer  working towards my Design BFA at Western Washington University. 
+                            I love exploring all things design, but my heart belongs to branding, typography, and packaging.
+                            During my studies, I’ve grown my skills in Adobe Creative Suite and Figma, gaining hands-on experience with their tools.
+                            When I'm not designing, you’ll find me outdoors, getting creative with new projects, experimenting in the kitchen, or spending time with friends and family.
+                        </p>
+                </div>
         </article>
 
-        <footer>
-            <hr> Copyright 2025<br><a href="allenk34@wwu.edu">allenk34@wwu.edu</a></br>
+        <footer class="row">
+                <hr> Copyright 2025<br><a href="allenk34@wwu.edu">allenk34@wwu.edu</a></br>
         </footer>
    </body>
 </html>
