--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
        <link href="css/exercise5.css" type="text/css" rel="stylesheet">
        <link rel="preconnect" href="https://fonts.googleapis.com">
        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-       <link href="https://fonts.googleapis.com/css2?family=Oranienbaum&display=swap" rel="stylesheet">
-       <title>Digital Design 1</title>
+       <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet"><title>Digital Design 1</title>
    </head>
    
    <body class="container">
