--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
    <body class="container">
         <header class="row">
              <div class="five columns">
-                <h1>Katie Allen</h1>
+                <h1>Kate Allen</h1>
                 <h2>DSGN 372</h2>
                 <h2>Spring 2025</h2>
             </div>
