--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
             <ul>
                 <li><a href="https://www.figma.com/proto/BUtIkZMbCI3269zu67ruSE/Digital-Design-Project-1-Wireframes?node-id=215-20&t=Q63ndFiRNEe6lkcG-1">Project 1 Desktop</a></li>
                 <li><a href="https://www.figma.com/proto/BUtIkZMbCI3269zu67ruSE/Digital-Design-Project-1-Wireframes?node-id=12-426&p=f&t=Q63ndFiRNEe6lkcG-0&scaling=scale-down&content-scaling=fixed&starting-point-node-id=28%3A17">Project 1 Mobile</a></li>
-                <li><a href="Files/Digital Design-Project 1.pdf" target="_blank">Project 1 Process</a></li>
-                <li><a href="project-2/index.html">Project 2</a></li>
+                <li><a href="Digital Design-Project 1.pdf" target="_blank">Project 1 Process</a></li>
+                <li><a href="">Project 2</a></li>
                 <li><a href="project-2/index.html">Project 2 Process</a></li>
             </ul>
         </nav>
