--- a/Files/Project 2/Project2.html
+++ b/Files/Project 2/Project2.html
@@ -18,7 +18,7 @@
 
         <style>
             body {
-              cursor: url('images/Cursor\ Icon.png'), auto;
+              cursor: url('images/Disco\ Ball\ Two.png') auto;
             }
         </style>
 
@@ -26,7 +26,7 @@
             <div class="container">
                 <nav class="nav-bar">
                     <div class="nav-links left">
-                        <a href="#plot">Plot</a>
+                        <a href="#Plot">Plot</a>
                         <a href="#Characters">Characters</a>
                         <a href="#Setting">Setting</a>
                     </div>
@@ -181,7 +181,7 @@
         <footer class="site-footer">
             <div class="footer-top">
               <nav class="footer-nav left">
-                <a href="#plot">Plot</a>
+                <a href="#Plot">Plot</a>
                 <a href="#Characters">Characters</a>
                 <a href="#Setting">Setting</a>
               </nav>
