--- a/Files/Project 2/Project2.html
+++ b/Files/Project 2/Project2.html
@@ -11,6 +11,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Instrument+Serif:ital@0;1&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Instrument+Serif:ital@0;1&family=Ojuju:wght@200..800&display=swap" rel="stylesheet">
         <title>MAMMA MIA!</title>
+        <link rel="icon" href="/Files/Project 2/Images/Disco Ball Two.png" type="image/png">
      </head>
 
     <body>
@@ -193,5 +194,5 @@
         </footer>
 
     </body>
-    
+
 </html>
