--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                 <li><a href="https://www.figma.com/proto/BUtIkZMbCI3269zu67ruSE/Digital-Design-Project-1-Wireframes?node-id=12-426&p=f&t=Q63ndFiRNEe6lkcG-0&scaling=scale-down&content-scaling=fixed&starting-point-node-id=28%3A17">Project 1 Mobile</a></li>
                 <li><a href="Digital Design-Project 1.pdf">Project 1 Process</a></li>
                 <li><a href="/Files/Project 2/Project2.html">Project 2</a></li>
+                <li><a href="https://www.figma.com/proto/U9ETrVnHUuDs4A0wryVOLS/Digital-Design-2---Project-2?node-id=22-3&p=f&t=bHQMJLTLiRMGq3kI-1&scaling=scale-down&content-scaling=fixed&page-id=22%3A2&starting-point-node-id=22%3A3">Project 2 Prototype</a></li>
                 <li><a href="Project 2 Case Study.pdf">Project 2 Process</a></li>
             </ul>
         </nav>
